<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D028E3"
    tools:context=".ImageClassifyActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="#FFE01A"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/Heading"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#B82626"
        android:contentDescription="Image"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0" />

    <Button
        android:id="@+id/selectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/selectText" />

    <Button
        android:id="@+id/captureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/captureText" />

    <Button
        android:id="@+id/predictBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captureBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/predictionText" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/predictBtn"
        android:layout_marginTop="35dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Result"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>